--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-modal": "^3.16.1",
+    "tailwindcss": "3.3.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.12.0"
   }
 }
